# MonteCarlo-Ledger

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_CONTEXT.md  README.md  api.py  budget_engine.py  db_manager.py  domain_rules.py  main.py  monte_carlo_config.py  pyproject.toml  pyrightconfig.json  reproduce_issues.py  requirements.txt  schema.sql  test_api.py  test_budget_engine.py  test_financial_logic.py  test_hardening.py  test_int_safety.py  test_refactor_verification.py  timeline_service.py  walkthrough.md
.agents/rules/: 01-startup-and-scope.md  02-ledger-and-money-invariants.md
.agents/skills/validate-ledger-integrity/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.internal/: README.md
.internal/agents/rules/: 03-execution-and-verification.md  04-context-loading-and-contract-safety.md
.internal/context/: PROJECT_CONTEXT.md
docs/: ARCHITECTURE.md  engineering-walkthrough.md  upgrade-plan.md
monte_carlo_ledger/: __init__.py  api.py  budget_engine.py  cli.py  dashboards.py  db_manager.py  domain_rules.py  forecasting.py  monte_carlo_config.py  risk.py  schema.sql  timeline_service.py  ui.py  workflow_account.py  workflow_income.py  workflow_onboarding.py  workflow_payments.py  workflow_reporting.py  workflows.py
scripts/: reproduce_issues.py  reproduce_regressions.py
tests/: test_api.py  test_financial_logic.py  test_hardening.py  test_int_safety.py  test_ledger_engine.py  test_persistence_orphans.py  test_property_invariants.py  test_refactor_verification.py
(+1 files in other folders)
